--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Lab01 - Github Classroom
       </h1>
       <img
-        src="imgs/bootstrap-themes.png"
+        src="https://cpe.eng.cmu.ac.th/img/staff/Lecturer-20200626-135425.jpg"
         class="d-block mx-lg-auto img-fluid"
         alt="Bootstrap Themes"
         width="400"
@@ -50,8 +50,7 @@
           </p>
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
-              กรุณาป้อนข้อมูล รหัสนักศึกษา ชื่อ-สกุล ภาษาไทย-อังกฤษ
-              ของท่านที่นี่
+              630610999 โดม โพธิกานนท์ (Dome Potikanond)
             </div>
           </div>
         </div>
